--- a/.env
+++ b/.env
@@ -8,12 +8,19 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=trekssafari_booking
+# DB_USERNAME=root
+# DB_PASSWORD=
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=trekssafari_booking
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u948304892_trekssafari
+DB_USERNAME=u948304892_safaribooking
+DB_PASSWORD=Booking2024*
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
